--- a/Gasah/styles.css
+++ b/Gasah/styles.css
@@ -13,7 +13,7 @@
     align-items: center;
     flex-direction: row;
     gap: 250px;
-    background-color: blue;
+    background-color: #00566e;
     text-align: center;
     height: min-center;
     width: 100%;
